Upgraded to Molecule 3

--- a/{{cookiecutter.project_slug}}/meta/main.yml
+++ b/{{cookiecutter.project_slug}}/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: {{ cookiecutter.role_name }}
   author: {{ cookiecutter.author_name }}
   description: Template Ansible role
   version: {{ cookiecutter.project_version }}
